# LearnWithAI

./: .gitignore
ai-ml/: main.py  pyproject.toml  requirements.txt  test_graph.py  traceback_output.txt
ai-ml/graph/: agent_graph.py  resource_graph.py
ai-ml/node/: agent_nodes.py  quiz_service.py
ai-ml/routes/: __init__.py  agent.py  predictor.py  quiz.py  recommender.py
ai-ml/state/: agent_state.py
ai-ml/training/: Course Recommendation System.ipynb  generate_models.py  train_model.py
backend/: .env  package-lock.json  package.json  server.js
backend/config/: cloudinary.js
backend/controllers/: authController.js  connectionController.js  predictionController.js  quizController.js  recommenderController.js  resourceController.js  roadmapController.js  userController.js
backend/middleware/: authMiddleware.js
backend/models/: Connection.js  LearningPath.js  ProgressLog.js  Quiz.js  Resource.js  User.js
backend/routes/: authRoutes.js  connectionRoutes.js  predictionRoutes.js  quizRoutes.js  recommenderRoutes.js  resourceRoutes.js  roadmapRoutes.js  userRoutes.js
backend/services/: mlService.js  streakService.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/Components/: Navbar.jsx  ProtectedRoute.jsx
frontend/src/Pages/: Dashboard.jsx  Login.jsx  MCQ.jsx  Predictor.jsx  Profile.jsx  Recommender.jsx  Register.jsx  ResourceFinder.jsx  Roadmap.jsx  Social.jsx  UserProfile.jsx
frontend/src/context/: AuthContext.jsx
