[project]
name = "ai-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "joblib>=1.5.3",
    "langchain>=1.2.13",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "nltk>=3.9.4",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
]
